feat : 전체 랭킹 조회 및 Top 3 랭킹 조회 시 로직 수정
전체 랭킹 및 Top 3 랭킹 조회 시 List<Rank>를 조회하도록 수정